@@ -80,7 +80,11 @@ bool AIRSPACE_ALT::is_above  (const ALTITUDE_STATE& state,
 
 bool AIRSPACE_ALT::is_below  (const ALTITUDE_STATE& state,
                               const fixed margin) const {
-  return get_altitude(state) <= state.AirspaceAltitude + margin;
+  return get_altitude(state) <= state.AirspaceAltitude + margin ||
+    /* special case: GND is always "below" the aircraft, even if the
+       aircraft's AGL altitude turns out to be negative due to terrain
+       file inaccuracies */
+    (Base == abAGL && !positive(AGL));
 }
 
 fixed AIRSPACE_ALT::get_altitude(const ALTITUDE_STATE& state) const {
